http, router, services, pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<!-- <app-first></app-first> -->
-<app-user-list></app-user-list>
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="/first">First</a>
+    <a routerLink="/products">Products</a>
+</nav>
+
+<router-outlet></router-outlet>
